# docs/swagger.yaml
@@ -277,7 +277,6 @@ definitions:
       title:
         type: string
     type: object
-host: localhost:8081
 info:
   contact:
     email: support@swagger.io
@@ -318,6 +317,8 @@ paths:
           description: Invalid credentials
           schema:
             $ref: '#/definitions/github_com_adriannbhp_kartala-golang-task-management-api_pkg_response.SwaggerUnauthorizedResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Login user
       tags:
       - auth
@@ -351,6 +352,8 @@ paths:
           description: Invalid or expired token
           schema:
             $ref: '#/definitions/github_com_adriannbhp_kartala-golang-task-management-api_pkg_response.SwaggerUnauthorizedResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Refresh access token
       tags:
       - auth
@@ -381,6 +384,8 @@ paths:
           description: Conflict (Email or Username already exists)
           schema:
             $ref: '#/definitions/github_com_adriannbhp_kartala-golang-task-management-api_pkg_response.SwaggerBadRequestResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Register a new user
       tags:
       - auth
@@ -624,6 +629,9 @@ paths:
       summary: Get current user info
       tags:
       - users
+schemes:
+- http
+- https
 securityDefinitions:
   ApiKeyAuth:
     in: header
